- cool and then when you click on travel in the bar it shoudl go to http://fwinds.herokuapp.com/travel/ - and hwen you hover over on that page, can you set a max length for display and then just crop it for example immersion trips gets cut off - and link up the contact us and request a quote to send an e-mail to accounts@fourwindstours.com with the info - also send an e-mail to wherever they sent it from with some message like “Thank you for filling out our form, a representative will contact you shortly" - also for share your adventure instead of the login form just put coming soon 4hrs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -680,3 +680,24 @@ have a fixed width and height (but it's not required).
 #category_travels .media{
     margin: 10px 3px;
 }
+
+/*#trip .carousel-inner .item img{*/
+    /*max-width: 450px;*/
+    /*margin: 0 auto;*/
+/*}*/
+
+#trip .carousel-inner, #event .carousel-inner{
+    max-height: 456px;
+    overflow: hidden;
+}
+#trip .carousel-inner .item img,
+#event .carousel-inner .item img{
+    width: 70%;
+    margin: 0 auto;
+    height: auto;
+}
+
+#trip .carousel-indicators,
+#event .carousel-indicators{
+    bottom: -30px
+}
