--- a/website/templates/welcome_signin_form.html
+++ b/website/templates/welcome_signin_form.html
@@ -23,19 +23,20 @@
             <div class="row">
                 <div class="col-sm-12 box sign-in">
                     <h3>Share Your Adventure</h3>
-                    <form>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="username" placeholder="Username">
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" type="password" name="password" placeholder="Password">
-                        </div>
-                        <br/>
-                        <div class="form-group">
-                            <input class="btn btn-submit" type="submit" value="SIGN IN"/>
-                        </div>
-
-                    </form>
+                    <div> Comming soon...</div>
+{#                    <form>#}
+{#                        <div class="form-group">#}
+{#                            <input class="form-control" type="text" name="username" placeholder="Username">#}
+{#                        </div>#}
+{#                        <div class="form-group">#}
+{#                            <input class="form-control" type="password" name="password" placeholder="Password">#}
+{#                        </div>#}
+{#                        <br/>#}
+{#                        <div class="form-group">#}
+{#                            <input class="btn btn-submit" type="submit" value="SIGN IN"/>#}
+{#                        </div>#}
+{##}
+{#                    </form>#}
                 </div>
             </div>
         </div>
