--- a/website/templates/get_started_form.html
+++ b/website/templates/get_started_form.html
@@ -12,25 +12,30 @@
                         <div class="form-group row">
 
                             <div class="col-sm-6">
-                                <input class="form-control " type="text" name="first_name" placeholder="First Name"/>
+                                <input class="form-control " type="text" name="first_name" placeholder="First Name"
+                                data-sanitize="trim" data-validation="length" data-validation-length="min3"/>
                             </div>
                             <div class="col-sm-6">
-                                <input class="form-control" type="text" name="last_name" placeholder="Last Name"/>
+                                <input class="form-control" type="text" name="last_name" placeholder="Last Name"
+                                data-sanitize="trim" data-validation="length" data-validation-length="min3"/>
                             </div>
                         </div>
                         <div class="form-group">
                             <input class="form-control" type="text" name="organization" placeholder="Your School Name"/>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="email" placeholder="Your Email Address"/>
+                            <input class="form-control" type="text" name="email" placeholder="Your Email Address"
+                            data-sanitize="trim" data-validation="email"/>
                         </div>
                     </div>
                     <div class="col-md-6">
                          <div class="form-group">
-                            <input class="form-control" type="text" name="date" placeholder="Date"/>
+                            <input class="form-control" type="text" name="date" placeholder="Date yyyy-mm-dd" data-validation="date"
+                            data-validation-format="yyyy-mm-dd"/>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" type="text" name="message" placeholder="Your Request"></textarea>
+                            <textarea class="form-control" type="text" name="message" placeholder="Your Request"
+                            data-sanitize="trim" data-validation="length" data-validation-length="min20"></textarea>
                         </div>
                     </div>
                     <div class="clearfix"></div>
