--- a/website/templates/top_navbar.html
+++ b/website/templates/top_navbar.html
@@ -17,7 +17,7 @@
                 <li class="dropdown">
                     <a href="{% url 'travel' %}" class="dropdown-toggle" data-toggle="dropdown"
                         role="button" aria-haspopup="true" aria-expanded="false">
-                        TRAVEL <span class="caret"></span>
+                        <span onclick="window.location.href='{% url 'travel' %}'">TRAVEL <span class="caret"></span></span>
                     </a>
                     <ul class="dropdown-menu" id="travel-menu">
                         <li>
