--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,7 +89,7 @@
     margin-top: 15px;
     width: 100%;
 }
-#travel-menu #travel-menu-content #divider{
+#travel-menu #travel-menu-content .menu-divider{
     border-left: solid 2px yellow;
     min-height: 300px;
 }
