--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -3,7 +3,7 @@
 {% load page_tags %}
 
 {% block bootstrap3_extra_head %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}?__" />
 {% endblock %}
 
 {% block bootstrap3_title %}{% block title %}{% endblock %}{% endblock %}
