--- a/website/templates/testimonials.html
+++ b/website/templates/testimonials.html
@@ -12,7 +12,7 @@
                             <div class="item testimonial {%  if forloop.counter == 1 %} active {% endif %}">
                                 <p>
                                     <img src="{% static 'img/testimonial/quote.png' %}" alt="" class="quote">
-                                    {{ row.text }}
+                                    {{ row.text|slice:":200" }}
                                     <img
                         src="{% static 'img/testimonial/quote-close.png' %}" alt="" class="quote quote-close">
                                 </p>
