--- a/website/templates/welcome_signin_form.html
+++ b/website/templates/welcome_signin_form.html
@@ -22,8 +22,10 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-sm-12 box sign-in">
+                    <div class="row">
                     <h3>Share Your Adventure</h3>
                     <div> Comming soon...</div>
+                    </div>
 {#                    <form>#}
 {#                        <div class="form-group">#}
 {#                            <input class="form-control" type="text" name="username" placeholder="Username">#}
