- Update CA office address in footer - Link header logo to homepage

--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -108,7 +108,7 @@
             <div>
                 <span class="title">NEW YORK</span>
                 <address>
-                    30 Jericho Executive Plaza, Suite 500E<br/>Jericho, NY 11753<br/>
+                    7472 La Jolla Blvd, <br/>La Jolla, CA 92037<br/>
                     <span>direct <b>516.334.2400</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;toll-free <b>800.896.3858</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;fax <b>516.334.2466</b></span>
                 </address>
 
