--- a/website/templates/top_header.html
+++ b/website/templates/top_header.html
@@ -11,5 +11,7 @@
         </span>
     </div>
     <div class="text-center" id="top-banner">
-        <img src="{% static 'img/banner/banner-logo.png' %}" alt="FourWinds Logo">
+        <a href="{% url 'index' %}">
+            <img src="{% static 'img/banner/banner-logo.png' %}" alt="FourWinds Logo">
+        </a>
     </div>
