--- a/fourwinds/templates/base.html
+++ b/fourwinds/templates/base.html
@@ -1,4 +1,4 @@
-{% load static wagtailuserbar %}
+{% load static wagtailuserbar wagtailembeds_tags home_tags cache%}
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -22,6 +22,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         {# Global stylesheets #}
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static 'css/fourwinds.css' %}">
 
         {% block extra_css %}
@@ -29,14 +34,185 @@
         {% endblock %}
     </head>
 
-    <body class="{% block body_class %}{% endblock %}">
+    <body class="{% block body_class %}{% endblock %}" id="page">
         {% wagtailuserbar %}
+        {% block menu %}
+            {% get_site_root as site_root %}
+            {% top_menu parent=site_root calling_page=self %}
+        {% endblock %}
 
         {% block content %}{% endblock %}
 
-        {# Global javascript #}
-        <script type="text/javascript" src="{% static 'js/fourwinds.js' %}"></script>
+{#        Footer#}
+        <div id="footer">
 
+            <div class="text-center affiliates">
+                <p class="title">
+                    <span>OUR AFFILIATES</span>
+                </p>
+                <img src="{% static 'img/footer/footer-affiliates.png' %}" alt="affiliates">
+            </div>
+            <div id="menu-footer" class="text-center">
+
+                    <ul class="nav navbar-nav" >
+                        <li>
+                            <a href="#">
+                                HOME
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                OUR STORY
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                TRAVEL
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                SAFETY &amp; INSURANCE
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                REQUEST A QUOTE
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                SHARE YOUR ADVENTURE
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                CAREERS
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                BLOG
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                CONTACT US
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav policies">
+                        <li>
+                            <a href="#">
+                                Disclaimer and Payment Schedule
+                            </a>
+                        </li>
+                        <li>
+                            <a>|</a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Airline Disclaimer and Payment Schedule
+                            </a>
+                        </li>
+                        <li>
+                            <a>|</a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Privacy Policy
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav social">
+                        <li>
+                            <a href="#">
+                                <span class="facebook"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="instagram"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="twitter"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="pinterest"></span>
+                            </a>
+                        </li>
+                    </ul>
+                <div class="clearfix"></div>
+            </div>
+            <div id="contact-info" class="text-center">
+                <div>
+                    <span class="title">NEW YORK</span>
+                    <address>
+                        7472 La Jolla Blvd, <br/>La Jolla, CA 92037<br/>
+                        <span>direct <b>516.334.2400</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;toll-free <b>800.896.3858</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;fax <b>516.334.2466</b></span>
+                    </address>
+
+                </div>
+                <div>
+                    <span class="title">CALIFORNIA</span>
+                    <address>
+                        1010 Tourmaline Street<br/>San Diego, CA 92109<br/>
+                        <span>direct <b>858.900.3526</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;toll-free <b>888.933.3422</b></span>
+                    </address>
+
+                </div>
+                <div>
+                    <address>
+                        &copy; 2016 Four Winds International Tours & Travel. All Rights Reserved.<br/>
+    website by: andreafoglia.com
+                    </address>
+
+                </div>
+            </div>
+        </div>
+{#        End footer#}
+
+        {# Global javascript #}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script type="text/javascript" src="{% static 'js/fourwinds.js' %}"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+        <script src="{% static 'js/jquery.jcarousel.min.js' %}"></script>
+        <script src="{% static 'js/jquery.bootstrap-dropdown-hover.min.js' %}"></script>
+        <script type="text/javascript">
+        function jcarousel_move(left){
+            var direction = "+=1";
+            if(left){
+                direction = "-=1";
+            }
+            $('.jcarousel').jcarousel('scroll',direction);
+        }
+        $(document).ready(function(){
+            $('.jcarousel').jcarousel({
+                list: '.jcarousel-list',
+                items: '.jcarousel-item'
+            });
+            $('#top-navbar #travel-link').on('mouseover', function(e){
+                $('#top-navbar > [data-toggle="dropdown"]').trigger('mouseover');
+            });
+            $('#top-navbar #travel-dropdown-button');
+            $('#top-navbar > [data-toggle="dropdown"]').bootstrapDropdownHover({
+              // see next for specifications
+            });
+{#            $("#travel-menu").load("{% url 'travel_info' %}");#}
+        });
+        </script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+        <script type="text/javascript">
+            $.validate({
+                modules : 'sanitize'
+            });
+        </script>
         {% block extra_js %}
             {# Override this in templates to add extra javascript #}
         {% endblock %}
