--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -7,4 +7,7 @@
 {% block content %}
     {% main_slider calling_page=page %}
     {{ page.body|richtext }}
+
+    {% testimonials_slider calling_page=self %}
+
 {% endblock %}
