--- a/website/templates/website/website_testimonial_page.html
+++ b/website/templates/website/website_testimonial_page.html
@@ -13,5 +13,5 @@
                 {{ page.trip_event }}
                 {{ page.date }}
     </p>
-    <p><a class="btn btn-link" href="{{ page.get_parent.url }}">Return to blog</a></p>
+    <p><a class="btn btn-link" href="{{ page.get_parent.url }}">Return to testimonials</a></p>
 {% endblock %}
