- adding container class wrapping contents

--- a/website/templates/website/website_safety_insurance_index_page.html
+++ b/website/templates/website/website_safety_insurance_index_page.html
@@ -5,31 +5,32 @@
 {% block body_class %}template-blogindexpage{% endblock %}
 
 {% block content %}
+    <div class="container">
+        <div id="safety" class="container" >
+            <h1 class="title">{{ page.title }}</h1>
 
-    <div id="safety" class="container" >
-        <h1 class="title">{{ page.title }}</h1>
-
-        <div class="{% if page.body_right %}col-md-6{% endif %}">
-            {{ page.body_left|richtext }}
-        </div>
-        {% if page.body_right %}
-        <div class="col-md-6">
-            {{ page.body_right|richtext }}
-            {% if page.pdf %}
-                <a href="{{ page.pdf.url }}">
-                    <img src="{% static 'img/safety-and-insureance/saftey-icon-pdf.png' %}" alt="safety and insurance"/>
-                </a>
+            <div class="{% if page.body_right %}col-md-6{% endif %}">
+                {{ page.body_left|richtext }}
+            </div>
+            {% if page.body_right %}
+            <div class="col-md-6">
+                {{ page.body_right|richtext }}
+                {% if page.pdf %}
+                    <a href="{{ page.pdf.url }}">
+                        <img src="{% static 'img/safety-and-insureance/saftey-icon-pdf.png' %}" alt="safety and insurance"/>
+                    </a>
+                {% endif %}
+            </div>
             {% endif %}
+            {% if page.body_bottom %}
+            <div class="clearfix"></div>
+            <div class="text-center">
+                {{ page.body_bottom|richtext }}
+            </div>
+            {% endif %}
+
         </div>
-        {% endif %}
-        {% if page.body_bottom %}
+
         <div class="clearfix"></div>
-        <div class="text-center">
-            {{ page.body_bottom|richtext }}
-        </div>
-        {% endif %}
-
     </div>
-
-    <div class="clearfix"></div>
 {% endblock %}
