--- a/website/templates/website/website_about_index_page.html
+++ b/website/templates/website/website_about_index_page.html
@@ -5,11 +5,14 @@
 {% block body_class %}template-blogindexpage{% endblock %}
 
 {% block content %}
+
     <div id="our-story">
         <div class="col-md-5 pull-right" id="our-story-body">
             <h1 class="title">{{ page.title }}</h1>
             {{ page.body|richtext }}
         </div>
         <div class="clearfix"></div>
+    </div>
+    <div class="container">
     </div>
 {% endblock %}
