--- a/website/templates/website/website_testimonals_index_page.html
+++ b/website/templates/website/website_testimonals_index_page.html
@@ -5,24 +5,26 @@
 {% block body_class %}template-blogindexpage{% endblock %}
 
 {% block content %}
-   <h1 class="title">{{ page.title }}</h1>
+    <div class="container">
+        <h1 class="title">{{ page.title }}</h1>
 
-    <div class="intro">{{ page.intro|richtext }}</div>
+        <div class="intro">{{ page.intro|richtext }}</div>
 
-    {% for testimonial in testimonialpages %}
-        <div class="item testimonial">
-        {% with testimonial=testimonial.specific %}
-            <h2><a href="{% pageurl testimonial %}">{{ testimonial.title }}</a></h2>
-            <img src="{% static 'img/testimonial/quote.png' %}" alt="" style="float:left"
-                         class="quote">{{ testimonial.text|richtext }}<img
-                        src="{% static 'img/testimonial/quote-close.png' %}" alt="" class="quote quote-close"
-                        style="float:right;margin-top: -30px;">
-            <div class="clearfix"></div>
-            <p class="autor">
-                - {{ testimonial.full_name }}, {{ testimonial.organization }},
-                      {{ testimonial.trip_event }},  {{ testimonial.date }}
-            </p>
-        {% endwith %}
-        </div>
-    {% endfor %}
+        {% for testimonial in testimonialpages %}
+            <div class="item testimonial">
+            {% with testimonial=testimonial.specific %}
+                <h2><a href="{% pageurl testimonial %}">{{ testimonial.title }}</a></h2>
+                <img src="{% static 'img/testimonial/quote.png' %}" alt="" style="float:left"
+                             class="quote">{{ testimonial.text|richtext }}<img
+                            src="{% static 'img/testimonial/quote-close.png' %}" alt="" class="quote quote-close"
+                            style="float:right;margin-top: -30px;">
+                <div class="clearfix"></div>
+                <p class="autor">
+                    - {{ testimonial.full_name }}, {{ testimonial.organization }},
+                          {{ testimonial.trip_event }},  {{ testimonial.date }}
+                </p>
+            {% endwith %}
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
