--- a/website/templates/website/website_testimonial_page.html
+++ b/website/templates/website/website_testimonial_page.html
@@ -5,13 +5,15 @@
 {% block body_class %}template-blogindexpage{% endblock %}
 
 {% block content %}
-   <h1 class="title">{{ page.title }}</h1>
+    <div class="container">
+        <h1 class="title">{{ page.title }}</h1>
 
-    <div>{{ page.text|richtext }}</div>
-    <p class="autor">
-        - {{ page.full_name }}, {{ page.organization }},
-                {{ page.trip_event }}
-                {{ page.date }}
-    </p>
-    <p><a class="btn btn-link" href="{{ page.get_parent.url }}">Return to testimonials</a></p>
+        <div>{{ page.text|richtext }}</div>
+        <p class="autor">
+            - {{ page.full_name }}, {{ page.organization }},
+                    {{ page.trip_event }}
+                    {{ page.date }}
+        </p>
+        <p><a class="btn btn-link" href="{{ page.get_parent.url }}">Return to testimonials</a></p>
+    </div>
 {% endblock %}
