* fixing CA address

--- a/fourwinds/templates/base.html
+++ b/fourwinds/templates/base.html
@@ -152,7 +152,7 @@
                 <div>
                     <span class="title">NEW YORK</span>
                     <address>
-                        7472 La Jolla Blvd, <br/>La Jolla, CA 92037<br/>
+                        30 Jericho Executive Plaza, Suite 500E<br/>Jericho, NY 11753<br/>
                         <span>direct <b>516.334.2400</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;toll-free <b>800.896.3858</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;fax <b>516.334.2466</b></span>
                     </address>
 
@@ -160,7 +160,7 @@
                 <div>
                     <span class="title">CALIFORNIA</span>
                     <address>
-                        1010 Tourmaline Street<br/>San Diego, CA 92109<br/>
+                        7472 La Jolla Blvd, <br/>La Jolla, CA 92037<br/>
                         <span>direct <b>858.900.3526</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;toll-free <b>888.933.3422</b></span>
                     </address>
 
