--- a/fourwinds/templates/base.html
+++ b/fourwinds/templates/base.html
@@ -35,6 +35,15 @@
     </head>
 
     <body class="{% block body_class %}{% endblock %}" id="page">
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
         {% wagtailuserbar %}
         {% block menu %}
             {% get_site_root as site_root %}
