--- a/website/templates/blog/blog_post.html
+++ b/website/templates/blog/blog_post.html
@@ -31,21 +31,24 @@
 </div>
 
 <div class="meta">
-    <div class="tags">
+    <div class="tags pull-left">
         {% if blog.tags.all %}
-            Topics:
+            Tags:
                 {% for tag in blog.tags.all %}
                     <a href="{% url 'blog:tag' tag.slug %}/">{{ tag }}</a>{% if not forloop.last %}, {% endif %}
                 {% endfor %}
         {% endif %}
     </div>
-    <div class="tags-and-comments">
+    <div class="tags pull-right">
         {% if blog.categories.all %}
-            Posted in
+            Topics:
                 {% for cat in blog.categories.all %}
                     <a href="{% url 'blog:category' cat.category.slug %}">{{ cat.category.name }}</a>{% if not forloop.last %}, {% endif %}
                 {% endfor %} |
         {% endif %}
+    </div>
+    <div class="clearfix"></div>
+    <div class="tags-and-comments">
 
         <div id="comments" class="comments">
         {% if COMMENTS_APP == 'django_comments_xtd' %}
