change testimonial date field

--- a/website/templates/website/website_testimonial_page.html
+++ b/website/templates/website/website_testimonial_page.html
@@ -10,9 +10,8 @@
 
         <div>{{ page.text|richtext }}</div>
         <p class="autor">
-            - {{ page.full_name }}, {{ page.organization }},
-                    {{ page.trip_event }}
-                    {{ page.date }}
+          - {{ page.full_name }}, {{ page.organization }},
+            {{ page.trip_event }}, {{ page.date|date:"F Y" }}
         </p>
 
         {% if page.tags.all.count %}
