--- a/website/templates/website/website_testimonals_index_page.html
+++ b/website/templates/website/website_testimonals_index_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags wagtailimages_tags static%}
+{% load wagtailcore_tags wagtailimages_tags home_tags static%}
 
 {% block body_class %}template-blogindexpage{% endblock %}
 
@@ -21,7 +21,7 @@
                 <div class="clearfix"></div>
                 <p class="autor">
                    -{{ testimonial.full_name }}, {{ testimonial.organization }},
-                    {{ testimonial.trip_event }},  {{ testimonial.date|date:"F Y" }}
+                    {{ testimonial.trip_event }},  {{ testimonial.date|parse_date:"%Y-%m"|date:"F Y" }}
                 </p>
             {% endwith %}
             </div>
