--- a/website/templates/blog/tags/recents.html
+++ b/website/templates/blog/tags/recents.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="media-body">
-            <h4 class="media-heading">{{ blog.title }}</h4>
+            <h4 class="media-heading">{{ blog.title|title }}</h4>
             {{ blog.body|richtext|truncatewords_html:10 }}
             <a href="{% pageurl blog %}">Read full article &raquo;</a>
         </div>
