fix blog post titles

--- a/website/templates/blog/tags/recents.html
+++ b/website/templates/blog/tags/recents.html
@@ -7,7 +7,7 @@
             {% image blog.header_image width-100 class='media-object'%}
         </div>
         <div class="media-body">
-            <h4 class="media-heading">{{ blog.title }}</h4>
+            <h4 class="media-heading">{{ blog.title|title }}</h4>
             {{ blog.body|richtext|truncatewords_html:10 }}
             <a href="{% pageurl blog %}">Read full article &raquo;</a>
         </div>
