--- a/website/templates/blog/blog_index_page.html
+++ b/website/templates/blog/blog_index_page.html
@@ -22,7 +22,7 @@
                 </div>
                 {% endif %}
 
-                <h2>{{ blog.title }}</h2>
+                <h2>{{ blog.title|title }}</h2>
 
                 {% if blog.header_image %}
                 {% image blog.header_image width-500 %}
