fix padding between image and body text

--- a/fourwinds/static/css/fourwinds.css
+++ b/fourwinds/static/css/fourwinds.css
@@ -791,3 +791,11 @@ have a fixed width and height (but it's not required).
   float: right;
   margin-left: 16px;
 }
+
+/*Blog Styling*/
+.blog-intro {
+    padding-top: 20px;
+}
+
+
+
