fix blog image size

--- a/fourwinds/static/css/fourwinds.css
+++ b/fourwinds/static/css/fourwinds.css
@@ -791,3 +791,35 @@ have a fixed width and height (but it's not required).
   float: right;
   margin-left: 16px;
 }
+
+.fb-share {
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 60px;
+}
+
+/*Blog Styling*/
+
+.blog-intro {
+    padding-top: 20px;
+}
+
+.blog-img {
+    height: 450px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.blog-img img {
+    width: 100%;
+}
+
+.blog-recent {
+    height: 100px;
+    width: 120px;
+    overflow: hidden;
+}
+
+.blog-recent img {
+    width: 120px;
+}
